[package]
name = "hello-tokio-my-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1.11.0"
log = "0.4"
env_logger = "0.11"
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.101"
async-stream = "0.3.6"

[lints.clippy]
four_forward_slashes = "allow"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client_v1"
path = "src/bin/client_v1_set_get_unordered.rs"

[[bin]]
name = "client_v2"
path = "src/bin/client_v2_set_get_ordered.rs"

[[bin]]
name = "2_a"
path = "src/_2_a_mutex_high_contention.rs"

[[bin]]
name = "2_b"
path = "src/_2_b_mutex_sharding.rs"
